--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,11 +38,12 @@ dirs = "6.0.0"
 tracing-error = "0.2.1"
 chrono = "0.4.39"
 open = "5.3.2"
-secret-service = { version = "4.0.0", features = ["rt-tokio-crypto-rust"] }
-keyring = { version = "3.6.1", features = [
-    "linux-native-async-persistent",
-    "windows-native",
+keyring-lib = { version = "1.0.2", default-features = false, features = [
+    "tokio",
+    "derive",
+    "openssl",
 ] }
+secret-service = { version = "4.0.0", features = ["rt-tokio-crypto-openssl"] }
 
 [profile.release]
 codegen-units = 1
