--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,9 @@ keyring-lib = { version = "1.0.2", default-features = false, features = [
 ] }
 secret-service = { version = "4.0.0", features = ["rt-tokio-crypto-openssl"] }
 openssl = { version = "0.10", features = ["vendored"] }
+lazy_static = "1.5.0"
+piper-rs = "0.1.9"
+rodio = { version = "0.20.1", features = ["tracing"] }
 
 [profile.release]
 codegen-units = 1
