--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,8 +19,11 @@ toml = "0.8.19"
 serde = { version = "1.0.217", features = ["derive", "rc"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.26.1", features = ["url"] }
-reqwest = { version = "0.12.12" }
-eyre = "0.6.12"
+reqwest = { version = "0.12.15" }
+eyre = { version = "0.6.12", default-features = false, features = [
+    "auto-install",
+    "track-caller",
+] }
 futures = "0.3.31"
 color-eyre = "0.6.3"
 twitch-irc = { version = "5.0.1", features = [
@@ -43,7 +46,7 @@ keyring-lib = { version = "1.0.2", default-features = false, features = [
     "derive",
     "openssl",
 ] }
-secret-service = { version = "4.0.0", features = ["rt-tokio-crypto-openssl"] }
+secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-openssl"] }
 openssl = { version = "0.10", features = ["vendored"] }
 lazy_static = "1.5.0"
 piper-rs = "0.1.9"
