--- a/tedbot-ui/package.json
+++ b/tedbot-ui/package.json
@@ -14,13 +14,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@eslint/compat": "^1.2.8",
     "@tauri-apps/api": "^2.5.0",
-    "@tauri-apps/plugin-opener": "^2.2.6"
+    "@tauri-apps/plugin-opener": "^2.2.6",
+    "lucide-svelte": "^0.503.0"
   },
   "devDependencies": {
-    "@melt-ui/pp": "^0.3.2",
-    "@melt-ui/svelte": "^0.86.6",
+    "@eslint/compat": "^1.2.8",
     "@stylistic/eslint-plugin-js": "^4.2.0",
     "@stylistic/eslint-plugin-ts": "^4.2.0",
     "@sveltejs/adapter-static": "^3.0.6",
@@ -28,11 +27,17 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tauri-apps/cli": "^2",
+    "clsx": "^2.1.1",
     "eslint-p": "^0.20.0",
     "eslint-plugin-svelte": "^3.5.1",
+    "mode-watcher": "^1.0.2",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "svelte-sonner": "^0.3.28",
+    "tailwind-merge": "^3.2.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.4",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.0.3"
