--- a/tedbot-ui/package.json
+++ b/tedbot-ui/package.json
@@ -19,6 +19,7 @@
     "lucide-svelte": "^0.503.0"
   },
   "devDependencies": {
+	"@nobie-org/tailwindcss-animate": "^1.0.9",
     "@eslint/compat": "^1.2.8",
     "@stylistic/eslint-plugin-js": "^4.2.0",
     "@stylistic/eslint-plugin-ts": "^4.2.0",
@@ -27,6 +28,7 @@
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tauri-apps/cli": "^2",
+    "bits-ui": "^1.3.19",
     "clsx": "^2.1.1",
     "eslint-p": "^0.20.0",
     "eslint-plugin-svelte": "^3.5.1",
