--- a/tedbot-ui/src-tauri/Cargo.toml
+++ b/tedbot-ui/src-tauri/Cargo.toml
@@ -22,3 +22,6 @@ tauri = { version = "2.5.1", features = [] }
 tauri-plugin-opener = "2.2.6"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+specta = "=2.0.0-rc.22"
+tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
+specta-typescript = "=0.0.9"
