--- a/tedbot-ui/src-tauri/Cargo.toml
+++ b/tedbot-ui/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ name = "tedbot_ui_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
-tauri-build = { version = "2", features = [] }
+tauri-build = { version = "2.2.0", features = [] }
 
 [dependencies]
 tauri = { version = "2.5.1", features = [] }
@@ -25,3 +25,4 @@ serde_json = "1.0.140"
 specta = "=2.0.0-rc.22"
 tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
 specta-typescript = "=0.0.9"
+shared = { path = "../../shared" }
