--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["background", "shared", "tedbot-ui/src-tauri"]
+members = ["service", "shared", "tedbot-ui/src-tauri"]
