--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -3,6 +3,11 @@ name = "shared"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+name = "tedbot_shared"
+crate-type = ["dylib", "rlib"]
+
+
 [dependencies]
 clap = { version = "4.5.37", features = [
     "derive",
@@ -19,3 +24,4 @@ eyre = { version = "0.6.12", default-features = false, features = [
 dirs = "6.0.0"
 toml = "0.8.20"
 specta = "=2.0.0-rc.22"
+tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
