--- a/tedbot-ui/src-tauri/Cargo.toml
+++ b/tedbot-ui/src-tauri/Cargo.toml
@@ -23,6 +23,12 @@ tauri-plugin-opener = "2.2.6"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 specta = "=2.0.0-rc.22"
-tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
 specta-typescript = "=0.0.9"
 shared = { path = "../../shared" }
+
+[profile.release]
+codegen-units = 1
+lto = true
+opt-level = 2
+panic = "unwind"
+strip = true
