--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.5.1", features = [] }
+tauri = { version = "2.5.1", features = ["tray-icon"] }
 tauri-plugin-opener = "2.2.6"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.140"
@@ -66,9 +66,6 @@ secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-rust"] }
 lazy_static = "1.5.0"
 piper-rs = "0.1.9"
 rodio = { version = "0.20.1", features = ["tracing"] }
-tray-icon = "0.20.1"
-gtk = "0.18.2"
-
 
 [profile.release]
 codegen-units = 1
