--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@tauri-apps/api": "^2.5.0",
+    "@tauri-apps/plugin-log": "~2",
     "@tauri-apps/plugin-opener": "^2.2.6",
     "lucide-svelte": "^0.503.0"
   },
