--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.5.1", features = ["tray-icon"] }
+tauri = { version = "2.5.1", features = ["tray-icon", "linux-libxdo", "tracing"] }
 tauri-plugin-opener = "2.2.6"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.140"
@@ -47,8 +47,6 @@ twitch_api = { version = "0.7.0", features = [
     "reqwest",
 ] }
 twitch_oauth2 = { version = "0.15.1", features = ["client"] }
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.26.1", features = ["url"] }
 reqwest = { version = "0.12.15" }
@@ -58,14 +56,15 @@ twitch-irc = { version = "5.0.1", features = [
     "transport-ws-rustls-native-roots",
     "refreshing-token-rustls-native-roots",
 ] }
-tracing-error = "0.2.1"
 chrono = "0.4.39"
 open = "5.3.2"
 keyring-lib = { version = "1.0.2", features = ["derive"] }
 secret-service = { version = "5.0.0", features = ["rt-tokio-crypto-rust"] }
 lazy_static = "1.5.0"
 piper-rs = "0.1.9"
-rodio = { version = "0.20.1", features = ["tracing"] }
+rodio = { version = "0.20.1" }
+tauri-plugin-log = "2"
+log = "0.4.27"
 
 [profile.release]
 codegen-units = 1
