--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.2.0", features = [] }
 
 [dependencies]
-tauri = { version = "2.5.1", features = ["tray-icon", "linux-libxdo", "tracing"] }
+tauri = { version = "2.5.1", features = ["tray-icon", "linux-libxdo"] }
 tauri-plugin-opener = "2.2.6"
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = "1.0.140"
