--- a/package.json
+++ b/package.json
@@ -1,46 +1,49 @@
 {
-  "name": "tedbot",
-  "version": "0.1.0",
-  "description": "",
-  "type": "module",
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "tauri": "tauri",
-	"lint": "eslint --concurrency=auto --cache .",
-	"lint:fix": "eslint --concurrency=auto --cache --fix ."
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@tauri-apps/api": "2.8.0",
-    "@tauri-apps/plugin-opener": "2.5.0",
-    "mode-watcher": "^1.1.0"
-  },
-  "devDependencies": {
-    "@eslint/compat": "^1.3.2",
-    "@eslint/js": "^9.35.0",
-    "@lucide/svelte": "^0.544.0",
-    "@stylistic/eslint-plugin": "^5.3.1",
-    "@sveltejs/adapter-static": "^3.0.6",
-    "@sveltejs/kit": "^2.9.0",
-    "@sveltejs/vite-plugin-svelte": "^6.2.0",
-    "@tailwindcss/vite": "^4.0.0",
-    "@tauri-apps/cli": "^2",
-    "clsx": "^2.1.1",
-    "eslint": "^9.35.0",
-    "eslint-plugin-svelte": "^3.12.3",
-    "paneforge": "^1.0.0",
-    "svelte": "^5.0.0",
-    "svelte-check": "^4.0.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwind-variants": "^3.1.1",
-    "tailwindcss": "^4.0.0",
-    "tw-animate-css": "^1.3.8",
-    "typescript": "~5.9.2",
-    "typescript-eslint": "^8.43.0",
-    "vite": "^7.1.5"
-  }
+	"name": "tedbot",
+	"version": "0.1.0",
+	"description": "",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"tauri": "tauri",
+		"lint": "eslint --concurrency=auto --cache .",
+		"lint:fix": "eslint --concurrency=auto --cache --fix ."
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@tauri-apps/api": "2.8.0",
+		"@tauri-apps/plugin-opener": "2.5.0",
+		"mode-watcher": "^1.1.0",
+		"svelte-keyboard-shortcuts": "^0.0.2"
+	},
+	"devDependencies": {
+		"@eslint/compat": "^1.3.2",
+		"@eslint/js": "^9.35.0",
+		"@internationalized/date": "^3.9.0",
+		"@lucide/svelte": "^0.544.0",
+		"@stylistic/eslint-plugin": "^5.3.1",
+		"@sveltejs/adapter-static": "^3.0.9",
+		"@sveltejs/kit": "^2.39.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.0",
+		"@tailwindcss/vite": "^4.1.13",
+		"@tauri-apps/cli": "^2.8.4",
+		"bits-ui": "^2.9.8",
+		"clsx": "^2.1.1",
+		"eslint": "^9.35.0",
+		"eslint-plugin-svelte": "^3.12.3",
+		"paneforge": "^1.0.2",
+		"svelte": "^5.38.10",
+		"svelte-check": "^4.3.1",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^3.1.1",
+		"tailwindcss": "^4.1.13",
+		"tw-animate-css": "^1.3.8",
+		"typescript": "~5.9.2",
+		"typescript-eslint": "^8.43.0",
+		"vite": "^7.1.5"
+	}
 }
