--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -20,43 +20,44 @@ tauri-build = { version = "2.4.1", features = [] }
 [dependencies]
 tauri = { version = "2.8.5", features = [] }
 tauri-plugin-opener = "2.5.0"
-serde = { version = "1.0.221", features = ["derive"] }
-serde_json = "1.0.144"
+serde = { version = "1.0.221", features = ["derive", "rc", "alloc"] }
+serde_json = "1.0.145"
 specta = "=2.0.0-rc.22"
 specta-typescript = "=0.0.9"
 clap = { version = "4.5.37", features = [
-    "derive",
-    "env",
-    "unicode",
-    "wrap_help",
+	"derive",
+	"env",
+	"unicode",
+	"wrap_help",
 ] }
 clap_config = "0.1.1"
 dirs = "6.0.0"
 toml = "0.9.5"
 tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
 twitch_api = { version = "0.7.0", features = [
-    "twitch_oauth2",
-    "client",
-    "helix",
-    "eventsub",
-    "hmac",
-    "reqwest",
+	"twitch_oauth2",
+	"client",
+	"helix",
+	"eventsub",
+	"hmac",
+	"reqwest",
 ] }
 twitch_oauth2 = { version = "0.15.1", features = ["client"] }
 tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.27.0", features = ["url"] }
 reqwest = { version = "0.12.23" }
-futures = "0.3.31"
 twitch-irc = { version = "5.0.1", features = [
-    "transport-ws-rustls-native-roots",
-    "refreshing-token-rustls-native-roots",
+	"transport-ws-rustls-native-roots",
+	"refreshing-token-rustls-native-roots",
 ] }
 chrono = "0.4.39"
 open = "5.3.2"
 keyring-lib = { version = "1.0.2", features = ["derive"] }
 secret-service = { version = "5.1.0", features = ["rt-tokio-crypto-rust"] }
 rodio = { version = "0.21.1" }
-tauri-plugin-log = "2"
+tauri-plugin-log = "2.7.0"
+tracing-subscriber = "0.3.20"
+tracing = "0.1.41"
 
 [profile.dev]
 incremental = true
