--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"lint": "eslint --concurrency=auto --cache .",
 		"lint:fix": "eslint --concurrency=auto --cache --fix ."
 	},
-	"license": "MIT",
+	"license": "GPL-3.0-only",
 	"dependencies": {
 		"@tauri-apps/api": "2.8.0",
 		"@tauri-apps/plugin-opener": "2.5.0",
@@ -38,6 +38,7 @@
 		"paneforge": "^1.0.2",
 		"svelte": "^5.38.10",
 		"svelte-check": "^4.3.1",
+		"svelte-sonner": "^1.0.5",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.13",
