--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -59,6 +59,18 @@ tauri-plugin-log = "2.7.0"
 tracing-subscriber = "0.3.20"
 tracing = "0.1.41"
 anyhow = "1.0.99"
+colors-transform = "0.2.11"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }
+
+
+[target.'cfg(windows)'.dependencies]
+hex = "0.4.3"
+
+[target.'cfg(windows)'.dependencies.windows]
+version = "0.62.0"
+features = ["Win32", "Win32_Graphics", "Win32_Graphics_Dwm"]
 
 [profile.dev]
 incremental = true
