--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,8 @@ jobs:
             ~/.cargo/git
             target
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      - name: Install Rust Toolchains
-        run: rustup target add nightly-x86_64-unknown-linux-gnu --toolchain nightly
+      - name: Set Rust to Nightly
+        run: rustup override set nightly
       - name: Install Just
         uses: extractions/setup-just@v3
       - name: Install NPM
