--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -60,6 +60,8 @@ tracing = "0.1.41"
 anyhow = "1.0.100"
 colors-transform = "0.2.11"
 futures = "0.3.31"
+rand = "0.9.2"
+indexmap = "2.11.4"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }
