--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"@tauri-apps/api": "2.8.0",
 		"@tauri-apps/plugin-opener": "2.5.0",
 		"mode-watcher": "^1.1.0",
-		"svelte-keyboard-shortcuts": "^0.0.2"
+		"svelte-keyboard-shortcuts": "^0.0.2",
+		"svelte-virtual-scroll-list": "^1.3.0"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
