--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -62,6 +62,7 @@ colors-transform = "0.2.11"
 futures = "0.3.31"
 rand = "0.9.2"
 indexmap = "2.11.4"
+tracing-appender = "0.2.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }
