--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@tauri-apps/api": "2.8.0",
 		"@tauri-apps/plugin-opener": "2.5.0",
+		"ansi-to-html": "^0.7.2",
 		"mode-watcher": "^1.1.0",
 		"svelte-keyboard-shortcuts": "^0.0.2",
 		"svelte-virtual-scroll-list": "^1.3.0"
