--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -63,6 +63,7 @@ futures = "0.3.31"
 rand = "0.9.2"
 indexmap = "2.11.4"
 tracing-appender = "0.2.3"
+regex = "1.11.3"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }
