--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -43,7 +43,7 @@ twitch_api = { version = "0.7.0", features = [
 	"reqwest",
 ] }
 twitch_oauth2 = { version = "0.15.1", features = ["client"] }
-tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
+tokio = { version = "1.43.0", features = ["full"] }
 reqwest = { version = "0.12.23" }
 twitch-irc = { version = "5.0.1", features = [
 	"transport-ws-rustls-native-roots",
@@ -64,6 +64,7 @@ rand = "0.9.2"
 indexmap = "2.11.4"
 tracing-appender = "0.2.3"
 regex = "1.11.3"
+tokio-tungstenite = { version = "0.28.0", features = ["native-tls", "tokio-native-tls"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }
