--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,7 +18,7 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.4.1", features = [] }
 
 [dependencies]
-tauri = { version = "2.9.5", features = [] }
+tauri = { version = "2.9.5", features = [ "tray-icon" ] }
 tauri-plugin-opener = "2.5.2"
 serde = { version = "1.0.226", features = ["derive", "rc", "alloc"] }
 serde_json = "1.0.145"
