--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -83,7 +83,7 @@ features = ["Win32", "Win32_Graphics", "Win32_Graphics_Dwm"]
 incremental = true
 
 [profile.release]
-codegen-units = 1
-# lto = "thin"
-lto = true
+codegen-units = 16
+lto = "thin"
+# lto = true
 strip = true
