Revert "chore: update rust dependencies"
This reverts commit 9d4670087c0b38c6ee3325912be90912cb3b4dcb.
Breaks windows build

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "baerbot"
 version = "0.1.0"
-description = "Just another Twitch Bot"
+description = "A Tauri App"
 authors = ["Teddy-Kun"]
 edition = "2024"
 
