feat: WIP tts via piper

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -68,6 +68,8 @@ tokio-tungstenite = { version = "0.28.0", features = ["native-tls", "tokio-nativ
 dashmap = "6.1.0"
 obws = "0.14.0"
 tts = "0.26.3"
+piper-rs = "0.1.9"
+ort-sys = { version = "=2.0.0-rc.9", default-features = false } # lock to pre 2.0.0-rc10; otherwise piper-rs won't build
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }
