--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -44,7 +44,7 @@ twitch_api = { version = "0.7.0", features = [
 ] }
 twitch_oauth2 = { version = "0.15.1", features = ["client"] }
 tokio = { version = "1.43.0", features = ["full"] }
-reqwest = { version = "0.12.23" }
+reqwest = { version = "0.12.23", features = ["stream"] }
 twitch-irc = { version = "5.0.1", features = [
 	"transport-ws-rustls-native-roots",
 	"refreshing-token-rustls-native-roots",
