feat: finish implementing downloading of piper voices (probably); allow collecting voices into a map

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -70,7 +70,7 @@ obws = "0.14.0"
 tts = "0.26.3"
 piper-rs = "0.1.9"
 ort-sys = { version = "=2.0.0-rc.9", default-features = false } # lock to pre 2.0.0-rc10; otherwise piper-rs won't build
-phf = { version = "0.13.1", features = ["macros"] }
+phf = { version = "0.13.1", features = ["macros", "serde"] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 ashpd = { version = "0.12.0", features = ["tokio"], default-features = false }
